--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,15 @@
 # 2) pre-commit install --allow-missing-config
 #
 # yamllint checks this .pre-commit-config file as well
+
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
+
 ---
+# Commitizen runs in commit-msg stage
+# but we don't want to run the other hooks on commit messages
+default_stages: [commit]
+
 repos:
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.32.0
@@ -16,23 +24,40 @@ repos:
           '-d',
           '{extends: relaxed, rules: {line-length: {max: 120}}}'
         ]
+  # Enforce that commit messages allow for later changelog generation
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: 3.12.0
+    hooks:
+      # Requires that commitizen is already installed
+      - id: commitizen
+        stages: [commit-msg]
+  # Check formatting and lint for starlark code
+  - repo: https://github.com/keith/pre-commit-buildifier
+    rev: 6.3.3.1
+    hooks:
+      - id: buildifier
+      - id: buildifier-lint
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v3.0.3"
+    hooks:
+      - id: prettier
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: no-commit-to-branch
       - id: trailing-whitespace
   - repo: https://github.com/psf/black
-    rev: 23.7.0
+    rev: 23.10.1
     hooks:
       - id: black
         language_version: python3
   - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: 0.26.3
+    rev: 0.27.0
     hooks:
       - id: check-github-workflows
       - id: check-renovate
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v7.2.0
+    rev: v7.3.2
     hooks:
       - id: cspell
         # a local allowlist of dictionary words in .github/cspell.yaml.  This can get comical --
