--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,21 +23,21 @@ jobs:
         env:
           # Bazelisk will download bazel to here
           XDG_CACHE_HOME: ~/.cache/bazel-repo
-        run: bazel --bazelrc=.github/workflows/ci.bazelrc --bazelrc=.bazelrc build //:slamdev_rules_jq
+        run: bazel --bazelrc=.github/workflows/ci.bazelrc --bazelrc=.bazelrc build //:bazel_rules_jq
       - name: Set versioned archive name
-        run: cp bazel-bin/slamdev_rules_jq.tar.gz bazel-bin/slamdev_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz
+        run: cp bazel-bin/bazel_rules_jq.tar.gz bazel-bin/bazel_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz
       - name: Export checksum
-        run: 'echo "RELEASE_CHECKSUM=$(shasum -b -a 256 bazel-bin/slamdev_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz | cut -d " " -f 1)" >> $GITHUB_ENV'
+        run: 'echo "RELEASE_CHECKSUM=$(shasum -b -a 256 bazel-bin/bazel_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz | cut -d " " -f 1)" >> $GITHUB_ENV'
       - name: Upload release
         uses: softprops/action-gh-release@v1
         with:
-          files: bazel-bin/slamdev_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz
+          files: bazel-bin/bazel_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz
           fail_on_unmatched_files: true
           body: |
             ```starlark
             http_archive(
-                name = "slamdev_rules_jq",
+                name = "bazel_rules_jq",
                 sha256 = "${{ env.RELEASE_CHECKSUM }}",
-                url = "https://github.com/slamdev/rules_jq/releases/download/${{ env.RELEASE_VERSION }}/slamdev_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz",
+                url = "https://github.com/jqlang/bazel_rules_jq/releases/download/${{ env.RELEASE_VERSION }}/bazel_rules_jq-v${{ env.RELEASE_VERSION }}.tar.gz",
             )
             ```
