--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 # Cut a release whenever a new tag is pushed to the repo.
-# You should use an annotated tag, like `git tag -a v1.2.3`
+# You should use an annotated tag, like `git tag -a 1.2.3`
 # and put the release notes into the commit message for the tag.
 name: Release
 
