--- a/full-examples/basic/BUILD.bazel
+++ b/full-examples/basic/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
 load("@bazel_skylib//rules:write_file.bzl", "write_file")
-load("//jq:defs.bzl", "jq_eval")
+load("@rules_jq//jq:defs.bzl", "jq_eval")
 
 jq_eval(
     name = "actual",
