--- a/full-examples/basic-1.6/BUILD.bazel
+++ b/full-examples/basic-1.6/BUILD.bazel
@@ -1,18 +1,19 @@
 load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
 load("@bazel_skylib//rules:write_file.bzl", "write_file")
+load("@rules_jq//jq:defs.bzl", "jq_eval")
 
-genrule(
+jq_eval(
     name = "actual",
-    outs = ["actual.yaml"],
-    cmd = "$(JQ_BIN) '.one = 1' --null-input --compact-output > $@",
-    toolchains = ["@jq_toolchains//:resolved_toolchain"],
+    srcs = ["sample.yaml"],
+    filter = ".a.b",
+    raw_output = True,
 )
 
 write_file(
     name = "expected",
     out = "out.yaml",
     content = [
-        "{\"one\":1}",
+        "123",
         "",
     ],
 )
